<resources>
    <string name="app_name">MoviesApp</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_browse">Browse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_onboarding_explore_now">Explore Now</string>
    <string name="first_onboarding_get_access">Get access to a huge library of movies to suit all tastes. You will surely like it.</string>
    <string name="first_onboarding_find_your_next">Find Your Next Favorite Movie Here</string>
    <string name="next">Next</string>
    <string name="second_onboarding_explore_a">Explore a vast collection of movies in all qualities and genres. Find your next favorite film with ease.</string>
    <string name="second_onboarding_discover_movies">Discover Movies</string>
    <string name="third_onboarding_explore_all_genres">Explore All Genres</string>
    <string name="third_onboarding_discover_movies">Discover movies from every genre, in all available qualities. Find something new and exciting to watch every day.</string>
    <string name="back">Back</string>
    <string name="fourth_onboarding_create_watchlists">Create Watchlists</string>
    <string name="fourth_onboarding_save_movies">Save movies to your watchlist to keep track of what you want to watch next. Enjoy films in various qualities and genres.</string>
    <string name="fifth_onboarding_rate_review">Rate, Review, and Learn</string>
    <string name="fifth_onboarding_share_your">Share your thoughts on the movies you\'ve watched. Dive deep into film details and help others discover great movies with your reviews.</string>
    <string name="sixth_onboarding_start_watching">Start Watching Now</string>
    <string name="finish">Finish</string>
    <string name="login_with_google">Login With Google</string>
    <string name="or">OR</string>
    <string name="don_t_have_account">Don’t Have Account ?</string>
    <string name="create_one">Create One</string>
    <string name="login">Login</string>
    <string name="fragment_login_email">Email</string>
    <string name="fragment_login_password">Password</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="toLogin">Login</string>
    <string name="fragment_register_name">Name</string>
    <string name="fragment_register_email">Email</string>
    <string name="fragment_register_password">Password</string>
    <string name="fragment_register_confirm_password">Confirm Password</string>
    <string name="fragment_register_phone">Phone</string>
    <string name="register">Register</string>
    <string name="register_forgot_password">Forgot Password ?</string>
    <string name="pick_avatar">Pick Avatar</string>
    <string name="verifyEmail">Verify Email</string>
    <string name="rforgot_password_text">Forgot password</string>
    <string name="banner_card_rating">%s</string>
    <string name="home_fragment_movies">Movies</string>
    <string name="home_fragment_see_more">See More</string>
    <string name="card_genres">%s</string>
    <string name="home_fragment_genres">Genres</string>
    <string name="home_movies_rating">%s</string>
    <string name="title_user">User</string>
    <string name="fragment_search_hint_search">Search</string>
    <string name="detials_movie_name">%s</string>
    <string name="detials_movie_released">%s</string>
    <string name="detials_watch">Watch</string>
    <string name="detials_movie_vote">%s</string>
    <string name="detials_movie_duration">%s</string>
    <string name="detials_movie_rating">%s</string>
    <string name="detials_screen_shots">Screen Shots</string>
    <string name="detials_similar">"Similar "</string>
    <string name="detials_summary">Summary</string>
    <string name="detials_summart_text">%s</string>
    <string name="detials_cast">Cast</string>
    <string name="detials_actors">%s</string>
    <string name="detials_genres">Genres</string>
    <string name="detials_genres_name">%s</string>
    <string name="search_result_rating">%s</string>
    <string name="browse_genres_name">%s</string>
    <string name="filtered_resut_rating">%s</string>
    <string name="user_edit_profile">Edit Profile</string>
    <string name="user_exit">Exit</string>
    <string name="update_profile">Edit Profile</string>
    <string name="update_data">Update Data</string>
    <string name="delete_account">Delete Account</string>
    <string name="reset_rassword">Reset Password</string>
    <string name="create_account">Create Account</string>
</resources>