<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg_layer"
    tools:context=".ui.onboarding.OnBoardingFirstFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_explore_now"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/onboarding_button_background"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/first_onboarding_explore_now"
        app:backgroundTint="@null"
        android:textAllCaps="false"
        android:textColor="@color/app_bg"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="65dp"
        android:layout_marginBottom="24dp"
        android:text="@string/first_onboarding_get_access"
        android:textAlignment="center"
        android:textColor="#99FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/button_explore_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/first_onboarding_find_your_next"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@+id/description" />


</androidx.constraintlayout.widget.ConstraintLayout>