<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:paddingBottom="56dp"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:textColor="@color/app_bg"
            android:textSize="14sp"
            app:backgroundTint="@null"
            app:icon="@drawable/google_ic"
            app:iconGravity="textStart"
            app:iconSize="26dp"
            app:iconTint="#282A28"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginBottom="28dp"
            app:dividerColor="@color/app_color"
            app:layout_constraintBottom_toTopOf="@+id/loginWithGoogle" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-10dp"
            android:background="@color/app_bg"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/app_color"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:id="@+id/dontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/dontyHaveAccountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/don_t_have_account"
                android:textAlignment="center"
                android:textColor="@color/text_color" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/toRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:background="@color/app_bg"
                android:fontFamily="@font/roboto_bold"
                android:padding="0dp"
                android:text="@string/create_one"
                android:textAllCaps="false"
                android:textColor="@color/app_color"
                android:textSize="14sp"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@id/alreadyHaveAccountText"
                app:layout_constraintEnd_toEndOf="parent" />


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/app_bg"
            android:textSize="17sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/dontHaveAccount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emaillayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/fragment_login_email"
            android:textColorHint="@color/text_color"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
            app:startIconDrawable="@drawable/ic_email_with_padding"
            app:startIconTint="@color/text_color"
            tools:layout_editor_absoluteX="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_field_background"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textEmailAddress"
                android:paddingStart="66dp"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:hintTextColor="@color/text_color"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="60dp"
            android:hint="@string/fragment_login_password"
            android:textColorHint="@color/text_color"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/text_color"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:startIconDrawable="@drawable/ic_password_with_padding"
            app:startIconTint="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_field_background"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textPassword"
                android:paddingStart="66dp"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/app_bg"
            android:fontFamily="@font/roboto_bold"
            android:padding="0dp"
            android:text="@string/register_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/app_color"
            android:textSize="14sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>