<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:paddingBottom="56dp"
    tools:context=".ui.onboarding.OnBoardingSixthFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding_sixth_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/onboarding_components_background"
        android:paddingTop="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@color/app_bg"
            android:textSize="17sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/back" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/onboarding_back_button_background"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/app_color"
            android:textSize="17sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sixth_onboarding_start_watching"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/finish"
            tools:layout_editor_absoluteX="24dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>