<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forgetpassword.ForgotPasswprdFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:fontFamily="@font/roboto_bold"
        android:padding="0dp"
        app:icon="@drawable/back_ic"
        app:iconTint="@color/app_color"
        android:textAllCaps="false"
        android:textColor="@color/app_color"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        app:backgroundTint="@color/app_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rforgot_password_text"
        android:textColor="@color/app_color"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@id/back"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forgot_password_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerText" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/fragment_register_email"
        android:textColorHint="@color/text_color"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:startIconDrawable="@drawable/ic_email_with_padding"
        app:startIconTint="@color/text_color"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field_background"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textEmailAddress"
            android:paddingStart="66dp"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:hintTextColor="@color/text_color"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/fogetPasVerifyEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/verifyEmail"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        android:textColor="@color/app_bg"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/emaillayout"
        tools:layout_editor_absoluteX="16dp" />




</androidx.constraintlayout.widget.ConstraintLayout>